<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address Book</string>
    <string name="action_settings">Settings</string>
    <string name="Done">Done</string>
    <string name="call_contact">Call</string>
    <string name="delete_contact">Delete contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="email_contact">Send email</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="telephone_number">Telephone number</string>
    <string name="email_address">Email address</string>
    <string name="contact_image">Contact image</string>
    <string name="my_contacts">My contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="call_icon">Call Icon</string>
    <string name="email_icon">Email Icon</string>
    <string name="contact_icon">Contact Icon</string>

</resources>