<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_call"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/call_contact"/>
    <item
        android:id="@+id/action_email"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/email_contact"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/delete_contact"/>
    <item
        android:id="@+id/action_edit_done"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:visible="false"
        android:title="@string/done"/>

</menu>