<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactDetailsActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameTitle"
            android:layout_below="@+id/nameTitle"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#003399" />

        <TextView
            android:id="@+id/surnameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameLabel"
            android:layout_below="@+id/nameLabel"
            android:layout_marginTop="20dp"
            android:text="@string/surname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/surnameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/surnameTitle"
            android:layout_below="@+id/surnameTitle"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:text="@string/surname"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#003399" />

        <TextView
            android:id="@+id/telephoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/surnameLabel"
            android:layout_below="@+id/surnameLabel"
            android:layout_marginTop="20dp"
            android:text="@string/telephone"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/telephoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/telephoneTitle"
            android:layout_below="@+id/telephoneTitle"
            android:layout_marginTop="8dp"
            android:inputType="phone"
            android:text="@string/telephone"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#003399" />

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/telephoneLabel"
            android:layout_below="@+id/telephoneLabel"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailTitle"
            android:layout_below="@+id/emailTitle"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#003399" />

        <ImageView
            android:id="@+id/contactImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignLeft="@+id/emailLabel"
            android:layout_below="@+id/emailLabel"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/contact_image"
            android:src="@drawable/ic_contact_picture_2" />

        <Button
            android:id="@+id/editContactBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/contactImage"
            android:onClick="editContact"
            android:text="@string/edit_contact" />

        <ImageView
            android:id="@+id/call_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/call_icon"
            android:src="@drawable/call_contact" />

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/call_icon"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@+id/call_icon"
            android:contentDescription="@string/email_icon"
            android:src="@drawable/sym_action_email" />

        <Button
            android:id="@+id/finishEditBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/contactImage"
            android:onClick="finishContactEdit"
            android:text="@string/Done"
            android:visibility="gone" />

        <Button
            android:id="@+id/deleteContactBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/finishEditBtn"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/finishEditBtn"
            android:onClick="deleteContact"
            android:text="@string/delete_contact"
            android:visibility="gone" />
    </RelativeLayout>

</ScrollView>