<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/contact_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/contact_icon"
        android:src="@drawable/ic_contact_picture_2" >
    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/name"
            android:layout_width="150dp"
            android:layout_height="0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_weight="0.06"
            android:lines="1"
            android:text="@string/name"
            android:textSize="22sp" >
        </TextView>

        <TextView
            android:id="@+id/surname"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="0dp"
            android:lines="1"
            android:text="@string/surname"
            android:textColor="#476B6B"
            android:textSize="18sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>